--- a/app/src/main/res/layout/activity_rooms.xml
+++ b/app/src/main/res/layout/activity_rooms.xml
@@ -20,7 +20,8 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:headerLayout="@layout/nav_header_rooms"
-        app:menu="@menu/activity_rooms_drawer" />
+        app:headerLayout="@layout/nav_header_rooms"/>
+        <!--app:menu="@menu/activity_rooms_drawer"-->
+
 
 </android.support.v4.widget.DrawerLayout>
