--- a/app/src/main/res/layout/cspinner_row.xml
+++ b/app/src/main/res/layout/cspinner_row.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/ivFlag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="5dp"
+        android:layout_weight="1"
+        android:layout_gravity="start"
         app:srcCompat="@mipmap/ic_launcher" />
 
     <!--<TextView-->
@@ -29,8 +32,9 @@
         android:layout_toEndOf="@+id/ivFlag"
         android:layout_toRightOf="@+id/ivFlag"
         android:padding="5dp"
+        android:layout_weight="1"
         android:text="TextView"
         android:textColor="@color/colorAccent"
-        android:textSize="20sp"
+        android:textSize="14sp"
         android:textStyle="italic" />
-</RelativeLayout>
+</LinearLayout>
