--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -7,9 +7,9 @@
     android:padding="16dp">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cardview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/cardview">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -31,6 +31,8 @@
                     android:layout_alignBaseline="@+id/person_name"
                     android:layout_alignBottom="@+id/person_name"
                     android:layout_alignParentStart="false"
+                    android:layout_gravity="left|start"
+                    android:gravity="left|start"
                     android:text="999"
                     android:textSize="24sp" />
             </LinearLayout>
